--- a/client/src/App.css
+++ b/client/src/App.css
@@ -58,3 +58,15 @@ a{
 .material-icons:hover{
   cursor: pointer;
 }
+
+
+.topnav {
+  display: block;
+  color: black;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 17px;
+  overflow: hidden;
+  background-color: #e9e9e9;
+}
